--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_RAPID_API_KEY=f0dfbe2122mshb8024920b579fbbp17963fjsn21af82154a76
-ESLINT_NO_DEV_ERRORS=true
+REACT_APP_RAPID_API_KEY
+ESLINT_NO_DEV_ERRORS
